# test

./: README.md  pyproject.toml
search_comment/: cli.py
search_comment.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
